monticore-generator/src/test/resources/cocos/invalid/A2030/A2030d.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A2030;

grammar A2030d {

  abstract A extends B;

}
